# advent_of_code_2025

./: .gitignore  Cargo.toml  README.md
dec_01/: Cargo.toml  README.md
dec_01/src/: lib.rs  main.rs
dec_02/: Cargo.toml  README.md
dec_02/benches/: common.rs  doubled_sequence.rs  repeated_sequence.rs
dec_02/src/: lib.rs  main.rs
dec_03/: Cargo.toml  README.md
dec_03/src/: lib.rs  main.rs
dec_04/: Cargo.toml  README.md
dec_04/src/: lib.rs  main.rs
dec_05/: Cargo.toml  README.md
dec_05/src/: lib.rs  main.rs
dec_06/: Cargo.toml  README.md
dec_06/src/: lib.rs  main.rs
dec_07/: Cargo.toml  README.md
dec_07/src/: lib.rs  main.rs
dec_08/: Cargo.toml  README.md
dec_08/src/: lib.rs  main.rs
