[workspace]
members = ["dec_01", "dec_02", "dec_03", "dec_04", "dec_05", "dec_06", "dec_07", "dec_08"]
resolver = "3"

[workspace.package]
rust-version = "1.91.1"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0.100"
criterion = "0.8.1"
itertools = "0.14.0"
tap = "1.0.1"

[workspace.lints.clippy]
cast_possible_truncation = "deny"

[profile.bench]
debug = true

[profile.release]
debug = true
